add slot and pool fields to the delegation for pool query
